Rearrange for easier import or copy/paste.

--- a/loadmat_h5.ipynb
+++ b/loadmat_h5.ipynb
@@ -4,30 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A loadmat function for when you get the following error using `scipy.io.loadmat`:\n",
-    "```\n",
-    "---------------------------------------------------------------------------\n",
-    "NotImplementedError                       Traceback (most recent call last)\n",
-    "<ipython-input-16-200704b4a286> in <module>\n",
-    "      1 from scipy.io import loadmat\n",
-    "----> 2 loadmat(FILE)\n",
-    "\n",
-    "~/miniconda3/envs/sci/lib/python3.6/site-packages/scipy/io/matlab/mio.py in loadmat(file_name, mdict, appendmat, **kwargs)\n",
-    "    215     variable_names = kwargs.pop('variable_names', None)\n",
-    "    216     with _open_file_context(file_name, appendmat) as f:\n",
-    "--> 217         MR, _ = mat_reader_factory(f, **kwargs)\n",
-    "    218         matfile_dict = MR.get_variables(variable_names)\n",
-    "    219 \n",
-    "\n",
-    "~/miniconda3/envs/sci/lib/python3.6/site-packages/scipy/io/matlab/mio.py in mat_reader_factory(file_name, appendmat, **kwargs)\n",
-    "     76         return MatFile5Reader(byte_stream, **kwargs), file_opened\n",
-    "     77     elif mjv == 2:\n",
-    "---> 78         raise NotImplementedError('Please use HDF reader for matlab v7.3 files')\n",
-    "     79     else:\n",
-    "     80         raise TypeError('Did not recognize version %s' % mjv)\n",
-    "\n",
-    "NotImplementedError: Please use HDF reader for matlab v7.3 files\n",
-    "```"
+    "# Example usage"
    ]
   },
   {
@@ -36,89 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py\n",
-    "import numpy as np\n",
+    "from loadmat_h5 import loadmat_h5\n",
     "\n",
-    "Dataset = h5py._hl.dataset.Dataset\n",
-    "Group = h5py._hl.group.Group\n",
-    "Reference = h5py.h5r.Reference\n",
-    "\n",
-    "\n",
-    "def loadmat_h5(file_name):\n",
-    "    '''Loadmat equivalent for -v7.3 or greater .mat files, which break scipy.io.loadmat'''\n",
-    "    \n",
-    "    def deref_s(s, f, verbose=False):  # dereference struct\n",
-    "        keys = [k for k in s.keys() if k != '#refs#']\n",
-    "        \n",
-    "        if verbose:\n",
-    "            print(f'\\nStruct, keys = {keys}')\n",
-    "\n",
-    "        d = {}\n",
-    "\n",
-    "        for k in keys:\n",
-    "            v = s[k]\n",
-    "\n",
-    "            if isinstance(v, Group):  # struct\n",
-    "                d[k] = deref_s(v, f, verbose=verbose)\n",
-    "            elif isinstance(v, Dataset) and isinstance(np.array(v).flat[0], Reference):  # cell\n",
-    "                d[k] = deref_c(v, f, verbose=verbose)\n",
-    "            elif isinstance(v, Dataset) and v.dtype == 'uint16':\n",
-    "                d[k] = ''.join(np.array(v).view('S2').flatten().astype(str))\n",
-    "                if verbose:\n",
-    "                    print(f'String, chars = {d[k]}')\n",
-    "            elif isinstance(v, Dataset):  # numerical array\n",
-    "                d[k] = np.array(v).T\n",
-    "                if verbose:\n",
-    "                    print(f'Numerical array, shape = {d[k].shape}')\n",
-    "\n",
-    "        return d\n",
-    "\n",
-    "    def deref_c(c, f, verbose=False):  # dereference cell\n",
-    "        n_v = c.size\n",
-    "        shape = c.shape\n",
-    "\n",
-    "        if verbose:\n",
-    "            print(f'\\nCell, shape = {shape}')\n",
-    "\n",
-    "        a = np.zeros(n_v, dtype='O')\n",
-    "\n",
-    "        for i in range(n_v):\n",
-    "            v = f['#refs#'][np.array(c).flat[i]]\n",
-    "\n",
-    "            if isinstance(v, Group):  # struct\n",
-    "                a[i] = deref_s(v, f, verbose=verbose)\n",
-    "            elif isinstance(v, Dataset) and isinstance(np.array(v).flat[0], Reference):  # cell\n",
-    "                a[i] = deref_c(v, f, verbose=verbose)\n",
-    "            elif isinstance(v, Dataset) and v.dtype == 'uint16':\n",
-    "                a[i] = ''.join(np.array(v).view('S2').flatten().astype(str))\n",
-    "                if verbose:\n",
-    "                    print(f'String, chars = {a[i]}')\n",
-    "            elif isinstance(v, Dataset):  # numerical array\n",
-    "                a[i] = np.array(v).T\n",
-    "                if verbose:\n",
-    "                    print(f'Numerical array, shape = {a[i].shape}')\n",
-    "\n",
-    "        return a.reshape(shape).T\n",
-    "    \n",
-    "    with h5py.File(file_name, 'r+') as f:\n",
-    "        d = deref_s(f, f)\n",
-    "        \n",
-    "    return d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Usage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "d = loadmat_h5('test_data.mat')"
    ]
   },
@@ -362,6 +258,13 @@
    ],
    "source": [
     "d['data']['my4tensor'].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you have MATLAB you can open the data file test_data.mat in the MATLAB environment for a direct comparison."
    ]
   }
  ],
